<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="comp3350.g16.inventorytracking.presentation.HomeActivity"

        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/InventoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonInventoryOnClick"
            android:text="@string/Inventory"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/OrdersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/InventoryButton"
            android:onClick="buttonOrdersOnClick"
            android:text="@string/Orders"/>

        <Button
            android:id="@+id/CreateOrdersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/OrdersButton"
            android:onClick="buttonCreateOrdersOnClick"
            android:text="@string/NewOrder"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="@android:dimen/thumbnail_height"
            app:srcCompat="@drawable/stock"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"/>

    </RelativeLayout>

</LinearLayout>
