<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    tools:context="comp3350.g16.inventorytracking.presentation.OrderDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewOrderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OrderNo."
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="82dp"/>

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="14"
                android:layout_row="0"
                android:layout_weight="1"
                android:text="@string/OrderStatus"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large"/>

            <TextView
                android:id="@+id/textViewOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OrderPrice"
                android:textAlignment="textEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="176dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="Order Date"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date"
                android:textSize="18sp"
                android:layout_marginStart="33dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView2"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="60dp"
                android:layout_toStartOf="@+id/textArrivalDate"
                android:layout_weight="1"
                android:text="Arrival Date"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textArrivalDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="Date"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listOrderItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:visibility="visible"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:id="@+id/textUpdateQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProductQuantity"/>

        <EditText
            android:id="@+id/editUpdateQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonUpdateQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonUpdateQuantityOnClick"
            android:text="@string/UpdateQuantity"/>

        <Button
            android:id="@+id/buttonFromOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonRemoveFromOrderOnClick"
            android:text="Remove Item"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/buttonUpdateQuantity"/>

    </RelativeLayout>


</LinearLayout>
